--- a/app/backend/views/index.ejs
+++ b/app/backend/views/index.ejs
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="<%= styleSrc %>" type="text/css" media="screen" charset="utf-8">
+    <link rel="icon" type="image/png" href="https://github.com/encharm/Font-Awesome-SVG-PNG/blob/master/white/png/16/coffee.png?raw=true">
     <%- metaHeader.title.toString() %>
     <%- metaHeader.base.toString() %>
     <%- metaHeader.meta.toString() %>
