Routing, CSS, page structure

--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -1,6 +1,6 @@
-@import "./globals/colors";
+@import "../globals/colors";
 
-.footer {
+.footerComponent {
   background-color : $footer-color;
   height           : 100px;
   width            : 100%;
