--- a/app/styles/components/_navBar.scss
+++ b/app/styles/components/_navBar.scss
@@ -1,10 +1,13 @@
 .navBarComponent {
-  color            : white;
   background-color : gray;
-  height           : 50px;
+  color            : white;
+  width            : 200px;
+  height           : 100%;
+  position         : absolute;
 
   a {
-    color    : black;
-    margin   : 20px;
+    display : block;
+    color   : black;
+    margin  : 20px;
   }
 }
