--- a/app/styles/pages/_files.scss
+++ b/app/styles/pages/_files.scss
@@ -1,3 +1,15 @@
 .filesComponent {
-  background-color: purple;
+  background-color : palegoldenrod;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
