--- a/app/styles/pages/_reports.scss
+++ b/app/styles/pages/_reports.scss
@@ -1,3 +1,15 @@
 .reportsComponent {
-  background-color: pink;
+  background-color : pink;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
