--- a/app/styles/pages/_social.scss
+++ b/app/styles/pages/_social.scss
@@ -1,3 +1,15 @@
 .socialComponent {
-  background-color: blueviolet;
+  background-color : blueviolet;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
