--- a/app/styles/pages/_accounting.scss
+++ b/app/styles/pages/_accounting.scss
@@ -1,3 +1,22 @@
 .accountingComponent {
-  background-color: red;
+  background-color : red;
+
+  .component {
+    width  : 100%;
+    height : 200px;
+  }
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
+
+
