--- a/app/styles/pages/_calendar.scss
+++ b/app/styles/pages/_calendar.scss
@@ -1,3 +1,15 @@
 .calendarComponent {
-  background-color: blue;
+  background-color : blue;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
