--- a/app/styles/pages/_eCommerce.scss
+++ b/app/styles/pages/_eCommerce.scss
@@ -1,3 +1,15 @@
 .eCommerceComponent {
-  background-color: green;
+  background-color : green;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
