--- a/app/styles/pages/_email.scss
+++ b/app/styles/pages/_email.scss
@@ -1,3 +1,15 @@
 .emailComponent {
-  background-color: yellow;
+  background-color : yellow;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
