--- a/app/styles/pages/_web.scss
+++ b/app/styles/pages/_web.scss
@@ -1,3 +1,15 @@
 .webComponent {
   background-color : dodgerblue;
+
+  .one {
+    background-color: white;
+  }
+
+  .two {
+    background-color: darkgrey;
+  }
+
+  .three {
+    background-color: white;
+  }
 }
