--- a/app/styles/components/_containers.scss
+++ b/app/styles/components/_containers.scss
@@ -1,21 +1,16 @@
 .app-container {
-  min-height : 500px;
+  min-height : 100vh;
   overflow   : hidden;
   position   : relative;
   width      : 100%;
-}
 
-.page-container {
-  height           : 100%;
-  left             : 200px;
-  overflow         : hidden;
-  position         : absolute;
-  width            : 100%;
-}
+  .page-container {
+    margin-left : 200px;
+    width       : 100%;
 
-.page {
-  height           : 100%;
-  overflow         : hidden;
-  position         : absolute;
-  width            : 100%;
+    .page {
+      height : 100%;
+      width  : 100%;
+    }
+  }
 }
