--- a/app/styles/components/_loading.scss
+++ b/app/styles/components/_loading.scss
@@ -1,6 +1,6 @@
 .loadingComponent {
   position: absolute;
-  background-color: darkmagenta;
+  background-color: white;
   width: 100%;
   height: 100%;
 }
