--- a/app/styles/pages/_social.scss
+++ b/app/styles/pages/_social.scss
@@ -1,15 +1,20 @@
 .socialComponent {
   background-color : blueviolet;
 
+  .component {
+    width  : 100%;
+    height : 200px;
+  }
+
   .one {
-    background-color: white;
+    background-color : white;
   }
 
   .two {
-    background-color: darkgrey;
+    background-color : darkgrey;
   }
 
   .three {
-    background-color: white;
+    background-color : white;
   }
 }
